// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card button is not rendered if a card has the href property set 1`] = `
<div
  className="mfui-beta-card mfui-beta-card_href"
>
  <Link
    className="mfui-beta-card__inner"
    href="card-href"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <span
        className="mfui-beta-card__fake-link"
      >
        Подключить
      </span>
    </div>
  </Link>
</div>
`;

exports[`Card disable left align if there is a button and link 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_fill mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        target="_self"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card left align of the interactive element 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_fill mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper mfui-beta-card__btns-wrapper_left-align"
    >
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        target="_self"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with icon 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        target="_self"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with img, if image source and svg source are specified 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_fill mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        target="_self"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with optional props 1`] = `
<div
  className="mfui-beta-card mfui-beta-card_centered-text className rootClass"
  data-test="value"
>
  <div
    className="mfui-beta-card__inner innerClass"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_fill mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button buttonClass"
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link linkClass"
        color="blue"
        href="#"
        target="_self"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with required props 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
  </div>
</div>
`;

exports[`Card render with a single interactive button element 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
    </div>
  </div>
</div>
`;

exports[`Card render with a single interactive link element 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        target="_self"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render with attribute "download" for <Button> and <Textlink> 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        download={true}
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        download={true}
        href="#"
        target="_self"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render with contain object fit 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_contain mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
    </div>
  </div>
</div>
`;

exports[`Card render with fullHeight 1`] = `
<div
  className="mfui-beta-card mfui-beta-card_full-height"
>
  <div
    className="mfui-beta-card__inner"
  >
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
  </div>
</div>
`;

exports[`Card render with link on the card 1`] = `
<div
  className="mfui-beta-card mfui-beta-card_href"
>
  <Link
    className="mfui-beta-card__inner"
    href="card-href"
    target="_blank"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <span
        className="mfui-beta-card__fake-link"
      >
        Подключить
      </span>
    </div>
  </Link>
</div>
`;

exports[`Card render without img and svg 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-beta-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        target="_self"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;
